# midiAccomp

./: CLAUDE.md  pyproject.toml
src/midi_accomp/: __init__.py  command_parser.py  main.py  midi_engine.py  session.py  session_storage.py  voice_input.py
