[project]
name = "midi-accomp"
version = "0.1.0"
description = "Voice-controlled MIDI accompanist for musicians"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mido",
    "python-rtmidi",
    "faster-whisper",
    "sounddevice",
    "numpy",
    "pynput",
    "rich",
    "ollama",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
midi-accomp = "midi_accomp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/midi_accomp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
